# Console3

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.agent/rules/: main-rules.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
src/: CMakeLists.txt  Console3.exe.manifest  main.cpp
src/Core/: IoThread.cpp  IoThread.h  PtySession.cpp  PtySession.h  RingBuffer.h  Session.cpp  Session.h  Settings.cpp  Settings.h  ShellDetector.cpp  ShellDetector.h  TerminalBuffer.cpp  TerminalBuffer.h
src/Emulation/: VTermWrapper.cpp  VTermWrapper.h
src/UI/: D2DRenderer.cpp  D2DRenderer.h  MainFrame.cpp  MainFrame.h  SettingsDialog.cpp  SettingsDialog.h  TabControl.cpp  TabControl.h  TerminalView.cpp  TerminalView.h
tests/: CMakeLists.txt
todo/: TODO.md
